--- a/-index.html
+++ b/-index.html
@@ -10,13 +10,160 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1 class="titulo">El Muro de TikTok</h1>
+    <h1 class="titulo" id="titulo">El Muro de TikTok</h1>
     <div class="elmuro">
         <div class="tag">
             <div class="avatar">
                 <img src="https://placehold.it/100x100" alt="">
             </div>
+            <div class="nombre">YorchDigital</div>
+            <div class="puntos">123</div>
+        </div>
+        <div class="tag">
+            <div class="avatar">
+                <img src="https://placehold.it/100x100" alt="">
+            </div>
+            <div class="nombre">Anthonysmithcamposgalla0</div>
+            <div class="puntos">1</div>
+        </div>
+        <div class="tag">
+            <div class="avatar">
+                <img src="https://placehold.it/100x100" alt="">
+            </div>
+            <div class="nombre">Morgan_G.de.eduradosoto</div>
+            <div class="puntos">123</div>
+        </div>
+        <div class="tag">
+            <div class="avatar">
+                <img src="https://placehold.it/100x100" alt="">
+            </div>
+            <div class="nombre">DennisElputo</div>
+            <div class="puntos">1</div>
+        </div>
+        <div class="tag">
+            <div class="avatar">
+                <img src="https://placehold.it/100x100" alt="">
+            </div>
+            <div class="nombre">YorchDigital</div>
+            <div class="puntos">123</div>
+        </div>
+        <div class="tag">
+            <div class="avatar">
+                <img src="https://placehold.it/100x100" alt="">
+            </div>
+            <div class="nombre">Cacaroto</div>
+            <div class="puntos">1</div>
+        </div>
+        <div class="tag">
+            <div class="avatar">
+                <img src="https://placehold.it/100x100" alt="">
+            </div>
+            <div class="nombre">Anthonysmithcamposgalla0</div>
+            <div class="puntos">123</div>
+        </div>
+        <div class="tag">
+            <div class="avatar">
+                <img src="https://placehold.it/100x100" alt="">
+            </div>
+            <div class="nombre">Cacaroto</div>
+            <div class="puntos">1</div>
+        </div>
+        <div class="tag">
+            <div class="avatar">
+                <img src="https://placehold.it/100x100" alt="">
+            </div>
+            <div class="nombre">Gianino__</div>
+            <div class="puntos">123</div>
+        </div>
+        <div class="tag">
+            <div class="avatar">
+                <img src="https://placehold.it/100x100" alt="">
+            </div>
+            <div class="nombre">Cacaroto</div>
+            <div class="puntos">1</div>
+        </div>
+        <div class="tag">
+            <div class="avatar">
+                <img src="https://placehold.it/100x100" alt="">
+            </div>
             <div class="nombre">pepe</div>
+            <div class="puntos">123</div>
+        </div>
+        <div class="tag">
+            <div class="avatar">
+                <img src="https://placehold.it/100x100" alt="">
+            </div>
+            <div class="nombre">Cacaroto.el.roto666</div>
+            <div class="puntos">1</div>
+        </div>
+        <div class="tag">
+            <div class="avatar">
+                <img src="https://placehold.it/100x100" alt="">
+            </div>
+            <div class="nombre">pepe</div>
+            <div class="puntos">123</div>
+        </div>
+        <div class="tag">
+            <div class="avatar">
+                <img src="https://placehold.it/100x100" alt="">
+            </div>
+            <div class="nombre">Cacaroto</div>
+            <div class="puntos">1</div>
+        </div>
+        <div class="tag">
+            <div class="avatar">
+                <img src="https://placehold.it/100x100" alt="">
+            </div>
+            <div class="nombre">pepe</div>
+            <div class="puntos">123</div>
+        </div>
+        <div class="tag">
+            <div class="avatar">
+                <img src="https://placehold.it/100x100" alt="">
+            </div>
+            <div class="nombre">Cacaroto</div>
+            <div class="puntos">1</div>
+        </div>
+        <div class="tag">
+            <div class="avatar">
+                <img src="https://placehold.it/100x100" alt="">
+            </div>
+            <div class="nombre">pepe</div>
+            <div class="puntos">123</div>
+        </div>
+        <div class="tag">
+            <div class="avatar">
+                <img src="https://placehold.it/100x100" alt="">
+            </div>
+            <div class="nombre">Cacaroto</div>
+            <div class="puntos">1</div>
+        </div>
+        <div class="tag">
+            <div class="avatar">
+                <img src="https://placehold.it/100x100" alt="">
+            </div>
+            <div class="nombre">pepe</div>
+            <div class="puntos">123</div>
+        </div>
+        <div class="tag">
+            <div class="avatar">
+                <img src="https://placehold.it/100x100" alt="">
+            </div>
+            <div class="nombre">Cacaroto</div>
+            <div class="puntos">1</div>
+        </div>
+        <div class="tag">
+            <div class="avatar">
+                <img src="https://placehold.it/100x100" alt="">
+            </div>
+            <div class="nombre">Cacaroto_pepe</div>
+            <div class="puntos">1</div>
+        </div>
+        <div class="tag">
+            <div class="avatar">
+                <img src="https://placehold.it/100x100" alt="">
+            </div>
+            <div class="nombre">Pedrito123</div>
             <div class="puntos">123</div>
         </div>
         <div class="tag">
