--- a/-index.html
+++ b/-index.html
@@ -174,6 +174,7 @@
             <div class="puntos">1</div>
         </div>
     </div>
+    <footer id="firma">Deja tu firma en el Muro. Por siempre</footer>
     <script src="main.js"></script>
 </body>
 </html>
